# OmniCam

./: .dockerignore  .gitignore  .prettierrc  README.md  components.json  docker-compose.yaml  eslint.config.js  go.mod  go.sum  nuxt.config.ts  package-lock.json  package.json  postgres_init.sql  prettier.config.mjs  sqlc.yaml  tailwind.config.js  test.sql  tools.go  tsconfig.json
predictive-algorithm/: .dockerignore  .env.example  Dockerfile  albation cart.json  albation no occlu.json  albation no ray.json  albation no res.json  albation sphe.json  basic_types.py  case a super.json  case a.json  case b ga.json  case b pso.json  case b rand.json  case b super.json  case b.json  case c super.json  case c.json  low res case b.json  main.py  message.py  optimization_results_v1.json  order_cite.py  pyproject.toml  state.py  system_dia.puml  utils.py
predictive-algorithm/cost_functions/: angle_cost.py
predictive-algorithm/src/: absdiff.py  basic_types.py  constant.py  diff.py  env.py  fig_gen.py  find_bit_mask.py  main.py  message.py  morph.py  state.py  test-2.py  test.py  utils.py
predictive-algorithm/src/algorithms/: __init__.py  differential_evolution.py  genetic.py  particle_swarm_opt.py  uniform_random.py
predictive-algorithm/src/cost_functions/: __init__.py  angle_cost.py  mounting_cost.py  occlusion_cost.py  resolution.py  resolution_cost.py
predictive-algorithm/src/dev/: visualization.py
predictive-algorithm/src/evaluation/: A_analyze.py  albation_no_occlu.py  albation_no_ray.py  albation_no_res.py  albation_sphe.py  case_a.py  case_a_super.py  case_b.py  (+14 more)
(+368 files in other folders)
