[project]
name = "predictive-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "fastapi[standard]>=0.135.1",
    "ipython>=9.9.0",
    "numpy>=2.4.0",
    "numpy-quaternion>=2024.0.13",
    "pydantic-settings>=2.13.1",
    "pyvista>=0.46.4",
    "scipy>=1.16.3",
    "vtk>=9.5.2",
]

[dependency-groups]
dev = [
    "pyqt6>=6.10.2",
    "pyvistaqt>=0.11.3",
]
