[project]
name = "predictive-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "numpy>=2.4.0",
    "numpy-quaternion>=2024.0.13",
    "protobuf>=7.34.1",
    "pydantic-settings>=2.13.1",
    "pyvista>=0.46.4",
    "redis>=7.3.0",
    "scipy>=1.16.3",
    "uvicorn>=0.41.0",
    "vtk>=9.5.2",
]

[dependency-groups]
dev = [
    "pyqt6>=6.10.2",
    "pyvistaqt>=0.11.3",
]
